[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panda_utils"
version = "1.0.2"
authors = [
    {name = "Toontown: Event Horizon", email = "development@toontowneventhorizon.com"}
]
description = "PandaUtils includes multiple tools for basic Panda3D automation"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
imagery = ["Pillow>=9.0.0"]
autopath = ["panda3d>=1.10"]
runnable = ["platformdirs"]

[project.urls]
homepage = "https://github.com/toontown-event-horizon/panda-utils"
bugtracker = "https://github.com/toontown-event-horizon/panda-utils/issues"